# FastAPI-Learning

./: .gitignore  README.MD  crud.py  db.sqlite3  items_views.py  main.py  pyproject.toml  queries.sql  requirements.txt
.github/workflows/: run_test.yml
alembic/: env.py
alembic/versions/: 2025_06_25_1534-b73a00e0ec5c_create_products_table.py  2025_06_25_1617-879e8dd73b7d_create_users_table.py  2025_06_25_1636-3517a226028c_create_posts_table.py  2025_06_27_1254-6ee5474d9a28_create_profile_table.py  2025_07_02_1525-051df2e34251_create_orders_table.py  2025_07_02_1603-76e5a8b4d1bc_create_order_product_association_table.py  2025_07_02_1623-8980aba26f80_qwerty.py  2025_08_18_1451-00afda171644_add_count_column_to_order_product_.py  2025_08_18_1706-5c4a823ea554_add_unit_price_column_to_order_product_.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: schemas.py  views.py
