[tool.poetry]
name = "fastapi-microservice"
version = "0.1.0"
description = ""
authors = ["MaxBakshaev <risen.2011@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
pydantic = {extras = ["email"], version = "^2.11.7"}
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.41"}
aiosqlite = "^0.21.0"
pydantic-settings = "^2.9.1"
alembic = "^1.16.2"
black = "^25.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
